--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-logger-decorator",
+  "name": "lambda-decorator-aws-logger",
   "version": "1.0.0",
   "description": "Decorator for AWS Lambda functions to set environment for aws-logger",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:blackwoodseven/aws-logger-decorator.git"
+    "url": "git@github.com:blackwoodseven/lambda-decorator-aws-logger.git"
   },
   "keywords": [
     "logger",
@@ -19,9 +19,9 @@
   "author": "Guillem Salas <gs@blackwoodseven.com>",
   "license": "SEE LICENSE IN License.md",
   "bugs": {
-    "url": "https://github.com/blackwoodseven/aws-logger-decorator/issues"
+    "url": "https://github.com/blackwoodseven/lambda-decorator-aws-logger/issues"
   },
-  "homepage": "https://github.com/blackwoodseven/aws-logger-decorator",
+  "homepage": "https://github.com/blackwoodseven/lambda-decorator-aws-logger",
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
