--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "rewire": "^2.5.2"
   },
   "dependencies": {
-    "aws-logger": "git+ssh://git@github.com/blackwoodseven/aws-logger.git#v1.0.3"
+    "aws-logger": "https://github.com/blackwoodseven/aws-logger.git#v1.0.3"
   }
 }
